# rust-raspberrypi-OS-study

./: .gitignore  Cargo.toml  Makefile  README.md
src/: bsp.rs  console.rs  cpu.rs  driver.rs  main.rs  panic_wait.rs  print.rs  synchronization.rs
src/_arch/aarch64/: cpu.rs
src/_arch/aarch64/cpu/: boot.rs  boot.s
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/: bcm.rs  common.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_p1011_uart.rs
src/bsp/raspberrypi/: console.rs  cpu.rs  driver.rs  kernel.ld  memory.rs
src/console/: null_console.rs
src/cpu/: boot.rs
