[package]
name = "rust-raspberrypi-OS-study"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = {version = "8.x.x"}

[features]
default = []
bsp-rpi-3 = []
bsp-rpi-4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[profile.release]
lto = true