[package]
name = "rust-raspberrypi-OS-study"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "8.x.x" }

[features]
default = []
bsp-rpi-3 = ["tock-registers"]
bsp-rpi-4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[profile.release]
lto = true